# takeoff_plugins

./: CMakeLists.txt  package.xml  plugins.xml
src/: takeoff_plugin_platform.cpp  takeoff_plugin_position.cpp  takeoff_plugin_speed.cpp
